--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Premise of a Perfect and loving God — Ninox Antolihao</title>
+  <title>The Premise of a Perfect and loving God -- Ninox Antolihao</title>
 
   <!-- Disclaimer -->
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
@@ -30,13 +30,13 @@
       right: 0;
       z-index: 1000;
       background: #1f1815;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      border-bottom: 2px solid rgba(255, 255, 255, 0.06);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
 
     .ref-header-inner {
       max-width: 1100px;
-      margin: 0 auto;
+      margin: 1 auto;
       padding: 0.5rem 1rem;
       display: flex;
       align-items: center;
@@ -55,7 +55,7 @@
       width: 32px;
       height: 32px;
       border-radius: 50%;
-      border: 2px solid #ff6b3d;
+      border: 1px solid #ff6b3d;
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -164,7 +164,7 @@
 
     .nav-toggle {
       display: none;
-      border: 1px solid rgba(255, 255, 255, 0.35);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       background: transparent;
       border-radius: 6px;
       padding: 0.2rem 0.45rem;
@@ -239,11 +239,11 @@
 
       .back-home-link {
         font-size: 0.7rem;
-        padding: 0.2rem 0.45rem;
+        padding: 0.45rem 0.45rem;
       }
 
       .page-content {
-        padding-top: 4.5rem;
+        padding-top: 6.5rem;
       }
     }
 
@@ -278,7 +278,7 @@
 
     @keyframes smoothScroll {
       0% { transform: translateX(100%); }
-      10% { transform: translateX(0); }
+      30% { transform: translateX(0); }
       100% { transform: translateX(-100%); }
     }
 
@@ -287,11 +287,11 @@
     ========================== */
     .audio-wrap {
       max-width: 800px;
-      margin: 0.8rem auto 1.2rem auto;
-      padding: 0.85rem 0.85rem;
-      border-radius: 14px;
-      background: #1f1613;
-      border: 1px solid rgba(255, 107, 61, 0.35);
+      margin: 1.2rem auto 1.2rem auto;
+      padding: 0.85rem 0.75rem;
+      border-radius: 16px;
+      background:#261a15;
+      border: 3px solid rgba(101, 55, 14, 1);
     }
 
     #reflectionAudio {
@@ -300,21 +300,21 @@
     }
 
     .playlist {
-      margin-top: 0.5rem;
+      margin-top: 0.9rem;
       display: flex;
       flex-direction: column;
-      gap: 0.3rem;
+      gap: 0.4rem;
     }
 
     .playlist-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.45rem 0.85rem;
-      background: #1f1815;
+      padding: 0.55rem 0.55rem;
+      background: #261a15;
       border-radius: 8px;
       cursor: pointer;
-      border: 1px solid #120d09;
+      border: 1.5px solid #120d09;
       transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
     }
 
@@ -325,13 +325,13 @@
     .playlist-row.active {
       background: #170d09;
       border-color: #997060;
-      box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
+      box-shadow: 0 0 2px rgba(255, 0, 0, 0.4);
     }
 
     .playlist-main {
       display: flex;
       flex-direction: column;
-      gap: 0.1rem;
+      gap: 0rem;
       overflow: hidden;
     }
 
@@ -361,7 +361,7 @@
 
     /* Local nav buttons (back / share / audio) */
     .nav-buttons {
-      margin-top: 8px;
+      margin-top: 0.5px;
       display: flex;
       gap: 8px;
     }
@@ -385,7 +385,6 @@
 </head>
 
 <body>
-
   <!-- FIXED GLOBAL HEADER -->
   <header class="ref-header">
     <div class="ref-header-inner">
@@ -428,24 +427,19 @@
           ☰
         </button>
       </div>
-
     </div>
   </header>
-
   <main class="page-content">
-
-    <!-- Local title + subtitle + buttons (not fixed) -->
-    <section style="max-width:800px;margin:0 auto 1rem auto;">
-      <div style="font-size:20px;font-weight:bold;">
-        The Primacy of Moral Accountability
-      </div>
-      <div class="scrolling-subtitle">
-        <span>A reflection on will, love, and divine design.</span>
-      </div>
-      <div class="nav-buttons">
+     <div class="nav-buttons">
         <button onclick="history.back()">Back</button>
         <button onclick="sharePage()">Share</button>
         <button onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
+      </div>
+      
+    <!-- Local title + subtitle + buttons (not fixed) -->
+    <section style="max-width:800px;margin:0 auto 0.8rem auto;">
+     <div class="scrolling-subtitle">
+        <span>A reflection on will, love, and divine design.</span>
       </div>
     </section>
 
@@ -462,8 +456,8 @@
             <div class="playlist-row active"
                  data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-sub">Track-1</div>
                 <div class="playlist-title">The Divine Premise</div>
+                                <div class="playlist-sub">The Primacy of Moral Accountability. A Reflection on Will, Love, and Design.</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
@@ -471,8 +465,8 @@
             <div class="playlist-row"
                  data-src="/reflections/pages/divine-hiddeness/theparadoxofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-sub">Track-2</div>
                 <div class="playlist-title">Divine Hiddeness</div>
+                <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
@@ -480,23 +474,21 @@
         </div>
       </section>
 
-      <hr />
-
       <h2>Premise of perfect loving God<br>
-        <span style="font-size:16px; color:#555;">Ninox Antolihao • First Edition ©2025 </span>
+        <span style="font-size:14px; color:#555;">Ninox Antolihao • First Edition ©2025 </span>
       </h2>
 
       <p>Our philosophical journey has moved from the observable mechanics of the universe to the profound ethical tension at the heart of the divine. This reflection is centered on the paradoxes that emerge when seeking to reconcile a perfect, all-powerful, and unconditionally loving creator with the ambiguity and suffering that define the human condition. The culmination of this inquiry is the powerful realization that the value of individual moral choice must surpass the obligation of simple obedience.</p>
 
-      <p>The traditional concept of a perfect God immediately encounters two fundamental challenges. First, the Paradox of Evil—the existence of immense, unwarranted suffering—seems incompatible with boundless power and love. If an entity is truly perfect, its creation should reflect an overflow of goodness, not a system designed with such pervasive flaws and dangers. Second, the Paradox of the Hidden God questions the logic of the relationship itself. If a creator genuinely desires a free and loving relationship with humanity, why establish the connection through distance, ambiguity, and the requirement of faith—a belief that must be accepted before any certain knowledge is provided?</p>
+      <p>The traditional concept of a perfect God immediately encounters two fundamental challenges. First, the Paradox of Evil--the existence of immense, unwarranted suffering--seems incompatible with boundless power and love. If an entity is truly perfect, its creation should reflect an overflow of goodness, not a system designed with such pervasive flaws and dangers. Second, the Paradox of the Hidden God questions the logic of the relationship itself. If a creator genuinely desires a free and loving relationship with humanity, why establish the connection through distance, ambiguity, and the requirement of faith--a belief that must be accepted before any certain knowledge is provided?</p>
 
-      <p>The theological defense for this flawed design rests on the gift of free will. This freedom, while necessary for genuine love, introduces a moral risk that guarantees failure, suffering, and distance. This risk assessment, however, leads to the most critical ethical challenge: the demand for blind obedience. To require belief without verifiable evidence is to ask the individual to suppress the very tools—reason and critical thought—that protect them from deception and manipulation. In the context of religious authority, this blind faith becomes a vulnerability, enabling control and dissolving personal moral accountability.</p>
+      <p>The theological defense for this flawed design rests on the gift of free will. This freedom, while necessary for genuine love, introduces a moral risk that guarantees failure, suffering, and distance. This risk assessment, however, leads to the most critical ethical challenge: the demand for blind obedience. To require belief without verifiable evidence is to ask the individual to suppress the very tools--reason and critical thought--that protect them from deception and manipulation. In the context of religious authority, this blind faith becomes a vulnerability, enabling control and dissolving personal moral accountability.</p>
 
       <p>This is where the distinction between two forms of faith becomes essential. The faith of blind obedience is ethically shallow; it is driven by fear of punishment or hope of reward, motivated purely by external rules. The value of the person is measured by compliance, which is easily counterfeited.</p>
 
-      <p>Conversely, the highest ethical standard is found in Real Faith—the authentic alignment of one's actions with one's deepest moral convictions. This form of faith requires integrity and moral choice.</p>
+      <p>Conversely, the highest ethical standard is found in Real Faith--the authentic alignment of one's actions with one's deepest moral convictions. This form of faith requires integrity and moral choice.</p>
 
-      <p>The final, compelling realization is this: If a just and omniscient God is to administer judgment, that judgment cannot possibly be based on whether a person simply followed directions. A just measure must be based on the individual’s moral struggle—the sincerity and effort involved in using reason and conscience to discern good from evil. The ambiguity of the system ultimately forces the individual away from the easy path of compliance and toward the difficult, autonomous work of developing true moral character. Thus, the integrity of a single, self-directed moral choice is fundamentally more important, and more deserving of recognition, than any act of unquestioning obedience.</p>
+      <p>The final, compelling realization is this: If a just and omniscient God is to administer judgment, that judgment cannot possibly be based on whether a person simply followed directions. A just measure must be based on the individual's moral struggle--the sincerity and effort involved in using reason and conscience to discern good from evil. The ambiguity of the system ultimately forces the individual away from the easy path of compliance and toward the difficult, autonomous work of developing true moral character. Thus, the integrity of a single, self-directed moral choice is fundamentally more important, and more deserving of recognition, than any act of unquestioning obedience.</p>
     </div>
   </main>
 
@@ -568,7 +560,7 @@
     function sharePage() {
       if (navigator.share) {
         navigator.share({
-          title: "The Primacy of Moral Accountability — Ninox Antolihao",
+          title: "The Primacy of Moral Accountability -- Ninox Antolihao",
           url: window.location.href
         });
       } else {
