--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -413,7 +413,6 @@
           <!-- Add other reflections here -->
         </ul>
       </nav>
-
       <!-- Right: badge + back + hamburger -->
       <div class="ref-header-right">
         <div class="current-page-badge">
@@ -490,7 +489,10 @@
 
       <p>The final, compelling realization is this: If a just and omniscient God is to administer judgment, that judgment cannot possibly be based on whether a person simply followed directions. A just measure must be based on the individual's moral struggle--the sincerity and effort involved in using reason and conscience to discern good from evil. The ambiguity of the system ultimately forces the individual away from the easy path of compliance and toward the difficult, autonomous work of developing true moral character. Thus, the integrity of a single, self-directed moral choice is fundamentally more important, and more deserving of recognition, than any act of unquestioning obedience.</p>
     </div>
-  </main>
+  <footer>
+      <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
+  </footer>
+</main>
 
   <script>
     // Hamburger toggle for mobile
