--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -406,54 +406,59 @@
 <body>
   <!-- FIXED GLOBAL HEADER -->
   <header class="ref-header">
-    <div class="ref-header-inner">
+  <div class="ref-header-inner">
 
-      <!-- Left brand + hamburger + local buttons -->
-      <div class="ref-header-left">
-        <a href="/reflections/index.html" class="brand-link">
-          <span class="brand-mark">✦</span>
-          <span class="brand-text">
-            <span class="brand-title">Moments of Solitude</span>
-            <span class="brand-subtitle">Stone Grill Reflections</span>
-          </span>
-        </a>
+    <!-- Left brand + hamburger + local buttons -->
+    <div class="ref-header-left">
+      <a href="/reflections/index.html" class="brand-link">
+        <!-- NEW: image logo -->
+        <img src="/reflections/assets/logo1.png"
+             alt="Moments of Solitude"
+             class="brand-logo">
+        <span class="brand-text">
+          <span class="brand-title">Moments of Solitude</span>
+          <span class="brand-subtitle">Stone Grill Reflections</span>
+        </span>
+      </a>
 
-        <div class="header-actions">
-          <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
-            ☰
-          </button>
+      <div class="header-actions">
+        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+          ☰
+        </button>
 
-          <div class="nav-buttons">
-            <button type="button" onclick="history.back()">Back</button>
-            <button type="button" onclick="sharePage()">Share</button>
-            <button type="button" onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Center nav: add more reflections as needed -->
-      <nav class="ref-nav" aria-label="Reflections navigation">
-        <ul>
-          <li><a href="/reflections/index.html">All Reflections</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-          <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">The Divine Premise</a></li>
-          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
-          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
-          <li><a href="/reflections/pages/the-god-we-created/read.html" class="active">The God We Created</a></li>
-          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
-          <!-- Add other reflections here -->
-        </ul>
-      </nav>
-
-      <!-- Right: page badge only -->
-      <div class="ref-header-right">
-        <div class="current-page-badge">
-          <span class="page-icon">△</span>
-          <span class="page-label">The Divine Premise</span>
+        <div class="nav-buttons">
+          <button type="button" onclick="history.back()">Back</button>
+          <button type="button" onclick="sharePage()">Share</button>
+          <button type="button" onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
         </div>
       </div>
     </div>
-  </header>
+
+    <!-- Center nav -->
+    <nav class="ref-nav" aria-label="Reflections navigation">
+      <ul>
+        <li><a href="/reflections/index.html">All Reflections</a></li>
+        <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+        <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">The Divine Premise</a></li>
+        <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+        <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+        <li><a href="/reflections/pages/the-god-we-created/read.html" class="active">The God We Created</a></li>
+        <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
+      </ul>
+    </nav>
+
+    <!-- Right: page badge -->
+    <div class="ref-header-right">
+      <div class="current-page-badge">
+        <span class="page-icon">△</span>
+        <span class="page-label">The Divine Premise</span>
+      </div>
+    </div>
+  </div>
+
+  <!-- NEW: subtle overlay behind open menu -->
+  <div class="nav-overlay"></div>
+</header>
 
   <main class="page-content">
     <!-- Local title + subtitle -->
