--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -20,268 +20,311 @@
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
 
   <style>
-    /* =========================
-       GLOBAL FIXED HEADER
-    ========================== */
-    .ref-header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 1000;
-      background: #1f1815;
-      border-bottom: 2px solid rgba(255, 255, 255, 0.06);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
-    }
+ /* =========================
+   GLOBAL FIXED HEADER
+========================== */
+.ref-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background: #1f1815;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.06);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
+}
 
-    .ref-header-inner {
-      max-width: 1100px;
-      margin: 1 auto;
-      padding: 0.8rem 1rem; /* slightly taller header */
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
+.ref-header-inner {
+  max-width: 1100px;
+  margin: 1 auto;
+  padding: 0.8rem 1rem; /* slightly taller header */
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
 
-    .ref-header-left {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 0.35rem;
-    }
+/* top-left cluster */
+.ref-header-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.35rem;
+}
 
-    /* Brand / logo */
-    .brand-link {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      text-decoration: none;
-    }
+/* Brand / logo */
+.brand-link {
+  display: flex;
+  align-items: center;
+  gap: 0.55rem;
+  text-decoration: none;
+}
 
-    .brand-mark {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      border: 1px solid #ff6b3d;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.9rem;
-      color: #ff6b3d;
-    }
+/* NEW: image logo */
+.brand-logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  flex-shrink: 0;
+}
 
-    .brand-text {
-      display: flex;
-      flex-direction: column;
-      line-height: 1.1;
-    }
+/* (kept in case you still use brand-mark somewhere) */
+.brand-mark {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid #ff6b3d;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  color: #ff6b3d;
+}
 
-    .brand-title {
-      font-size: 0.9rem;
-      font-weight: 600;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: #ffffff;
-    }
+.brand-text {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.1;
+}
 
-    .brand-subtitle {
-      font-size: 0.7rem;
-      color: #f0e0d0;
-      opacity: 0.8;
-    }
+.brand-title {
+  font-size: 0.9rem;
+  font-weight: 600;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 
-    /* Under-logo actions: hamburger + local nav buttons */
-    .header-actions {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
+.brand-subtitle {
+  font-size: 0.7rem;
+  color: #f0e0d0;
+  opacity: 0.8;
+}
 
-    /* Nav */
-    .ref-nav {
-      margin-left: 1rem;
-      flex: 1;
-    }
+/* Under-logo actions: hamburger + local nav buttons */
+.header-actions {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
-    .ref-nav ul {
-      display: flex;
-      gap: 0.75rem;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+/* Nav */
+.ref-nav {
+  margin-left: 1rem;
+  flex: 1;
+}
 
-    .ref-nav a {
-      display: inline-flex;
-      align-items: center;
-      padding: 0.35rem 0.7rem;
-      border-radius: 999px;
-      font-size: 0.8rem;
-      text-decoration: none;
-      color: #f3e4d5;
-      border: 1px solid transparent;
-      white-space: nowrap;
-      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
-    }
+.ref-nav ul {
+  display: flex;
+  gap: 0.75rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-    .ref-nav a:hover {
-      background: rgba(255, 107, 61, 0.14);
-      border-color: rgba(255, 107, 61, 0.4);
-    }
+.ref-nav a {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.35rem 0.7rem;
+  border-radius: 999px;
+  font-size: 0.8rem;
+  text-decoration: none;
+  color: #f3e4d5;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+}
 
-    .ref-nav a.active {
-      background: #ff6b3d;
-      color: #1f1815;
-      border-color: #ff6b3d;
-      font-weight: 600;
-    }
+.ref-nav a:hover {
+  background: rgba(255, 107, 61, 0.14);
+  border-color: rgba(255, 107, 61, 0.4);
+}
 
-    /* Right side of header */
-    .ref-header-right {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
+.ref-nav a.active {
+  background: #ff6b3d;
+  color: #1f1815;
+  border-color: #ff6b3d;
+  font-weight: 600;
+}
 
-    .current-page-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.4rem;
-      padding: 0.3rem 0.7rem;
-      border-radius: 999px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      font-size: 0.75rem;
-      color: #f7e9dd;
-    }
+/* Right side of header */
+.ref-header-right {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
 
-    .page-icon {
-      font-size: 0.85rem;
-      color: #ffb347;
-    }
+.current-page-badge {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.4rem;
+  padding: 0.3rem 0.7rem;
+  border-radius: 999px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  font-size: 0.75rem;
+  color: #f7e9dd;
+}
 
-    /* old back-home-link styles kept but button removed in markup
-    .back-home-link {
-      font-size: 0.75rem;
-      text-decoration: none;
-      color: #ffb347;
-      padding: 0.3rem 0.5rem;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 179, 71, 0.5);
-      background: rgba(0, 0, 0, 0.25);
-      white-space: nowrap;
-    }
+.page-icon {
+  font-size: 0.85rem;
+  color: #ffb347;
+}
 
-    .back-home-link:hover {
-      background: #ffb347;
-      color: #1f1815;
-    }
-    */
+/* old back-home-link styles kept but button removed in markup
+.back-home-link {
+  font-size: 0.75rem;
+  text-decoration: none;
+  color: #ffb347;
+  padding: 0.3rem 0.5rem;
+  border-radius: 999px;
+  border: 1px solid rgba(255, 179, 71, 0.5);
+  background: rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+}
 
-    .nav-toggle {
-      display: none;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      background: transparent;
-      border-radius: 6px;
-      padding: 0.25rem 0.5rem;
-      font-size: 1.05rem;
-      color: #f7e9dd;
-    }
+.back-home-link:hover {
+  background: #ffb347;
+  color: #1f1815;
+}
+*/
 
-    /* Local nav buttons (Back / Share / Audio) placed next to hamburger */
-    .nav-buttons {
-      display: flex;
-      gap: 0.4rem;
-    }
+.nav-toggle {
+  display: none;
+  border: 1px solid rgba(255, 255, 255, 0.35);
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 999px;
+  padding: 0.25rem 0.55rem;
+  font-size: 1.05rem;
+  color: #f7e9dd;
+  cursor: pointer;
+  transition: background 0.2s ease, border-color 0.2s ease, transform 0.15s ease;
+}
 
-    .nav-buttons button {
-      background: #26201c;
-      color: #fff;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 0.75rem;
-      cursor: pointer;
-      white-space: nowrap;
-    }
+/* hamburger “active” look when nav is open */
+.ref-header.nav-open .nav-toggle {
+  background: rgba(255, 107, 61, 0.18);
+  border-color: rgba(255, 107, 61, 0.75);
+  transform: translateY(0.5px);
+}
 
-    .nav-buttons button:hover {
-      background: #ff6b3d;
-      border-color: #ff6b3d;
-      color: #1f1815;
-    }
+/* Local nav buttons (Back / Share / Audio) placed next to hamburger */
+.nav-buttons {
+  display: flex;
+  gap: 0.4rem;
+}
 
-    /* Main layout */
-    .page-content {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 5rem 1rem 2rem; /* more top padding for taller header + actions */
-    }
+.nav-buttons button {
+  background: #26201c;
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 4px 10px;
+  border-radius: 999px;
+  font-size: 0.75rem;
+  cursor: pointer;
+  white-space: nowrap;
+}
 
-    @media (max-width: 900px) {
-      .brand-subtitle {
-        display: none;
-      }
+.nav-buttons button:hover {
+  background: #ff6b3d;
+  border-color: #ff6b3d;
+  color: #1f1815;
+}
 
-      .ref-nav ul {
-        gap: 0.4rem;
-      }
+/* Main layout */
+.page-content {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 5rem 1rem 2rem; /* more top padding for taller header + actions */
+}
 
-      .ref-nav a {
-        padding: 0.25rem 0.55rem;
-        font-size: 0.75rem;
-      }
+/* ===== Overlay behind open nav (not too strong) ===== */
+.nav-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.38); /* softened dim */
+  z-index: 900; /* below header (1000) but above page content */
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s ease;
+}
 
-      .current-page-badge {
-        display: none;
-      }
-    }
+/* When menu is open, fade in overlay */
+.ref-header.nav-open + .page-content,
+.ref-header.nav-open ~ main {
+  /* no-op selector just to keep relation; overlay itself is controlled below */
+}
 
-    @media (max-width: 768px) {
-      .ref-header-inner {
-        flex-wrap: nowrap;
-        align-items: flex-start;
-      }
+.ref-header.nav-open .nav-overlay {
+  opacity: 1;
+  pointer-events: auto;
+}
 
-      .ref-nav {
-        position: fixed;
-        top: 64px;
-        left: 0;
-        right: 0;
-        background: #1f1815;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.25s ease;
-        margin-left: 0;
-      }
+@media (max-width: 900px) {
+  .brand-subtitle {
+    display: none;
+  }
 
-      .ref-nav ul {
-        flex-direction: column;
-        padding: 0.5rem 1rem 0.8rem;
-        gap: 0.25rem;
-      }
+  .ref-nav ul {
+    gap: 0.4rem;
+  }
 
-      .ref-nav a {
-        width: 100%;
-        justify-content: flex-start;
-      }
+  .ref-nav a {
+    padding: 0.25rem 0.55rem;
+    font-size: 0.75rem;
+  }
 
-      .ref-header.nav-open .ref-nav {
-        max-height: 260px;
-      }
+  .current-page-badge {
+    display: none;
+  }
+}
 
-      .nav-toggle {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-      }
+@media (max-width: 768px) {
+  .ref-header-inner {
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
 
-      .page-content {
-        padding-top: 7rem;
-      }
-    }
+  .ref-nav {
+    position: fixed;
+    top: 64px; /* below taller header */
+    left: 0;
+    right: 0;
+    background: rgba(31, 24, 21, 0.94); /* slightly see-through, blends with page */
+    border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s ease;
+    margin-left: 0;
+    backdrop-filter: blur(10px); /* soft blur, less distracting */
+  }
 
+  .ref-nav ul {
+    flex-direction: column;
+    padding: 0.5rem 1rem 0.8rem;
+    gap: 0.25rem;
+  }
+
+  .ref-nav a {
+    width: 100%;
+    justify-content: flex-start;
+  }
+
+  .ref-header.nav-open .ref-nav {
+    max-height: 260px;
+  }
+
+  .nav-toggle {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .page-content {
+    padding-top: 7rem;
+  }
+}
     /* =========================
        PAGE-SPECIFIC STYLES
     ========================== */
