--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -455,7 +455,7 @@
     <div class="ref-header-left">
       <a href="/reflections/index.html" class="brand-link">
         <!-- NEW: image logo -->
-        <img src="/reflections/assets/logo1.png"
+        <img src="/reflections/assets/logo1.PNG"
              alt="Moments of Solitude"
              class="brand-logo">
         <span class="brand-text">
