--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -565,80 +565,102 @@
   </main>
 
   <script>
-    // Hamburger toggle for mobile
-    (function () {
-      const header = document.querySelector('.ref-header');
-      const toggle = document.querySelector('.nav-toggle');
-      const nav = document.querySelector('.ref-nav');
+  // Hamburger toggle for mobile + overlay close
+  (function () {
+    const header = document.querySelector('.ref-header');
+    const toggle = document.querySelector('.nav-toggle');
+    const nav = document.querySelector('.ref-nav');
+    const overlay = document.querySelector('.nav-overlay');
 
-      if (!header || !toggle || !nav) return;
+    if (!header || !toggle || !nav) return;
 
-      toggle.addEventListener('click', () => {
-        const isOpen = header.classList.toggle('nav-open');
-        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-      });
+    // Open / close when tapping hamburger
+    toggle.addEventListener('click', (e) => {
+      e.stopPropagation(); // avoid immediate close from document click
 
-      nav.addEventListener('click', (e) => {
-        if (e.target.tagName.toLowerCase() === 'a') {
-          header.classList.remove('nav-open');
-          toggle.setAttribute('aria-expanded', 'false');
-        }
-      });
-    })();
+      const isOpen = header.classList.toggle('nav-open');
+      toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+    });
 
-    // Audio playlist logic
-    document.addEventListener('DOMContentLoaded', () => {
-      const audioPlayer = document.getElementById('reflectionAudio');
-      const audioSource = document.getElementById('audioSource');
-      const rows = document.querySelectorAll('.playlist-row');
-
-      // Default track: first row
-      if (rows.length > 0) {
-        const firstSrc = rows[0].dataset.src;
-        audioSource.src = firstSrc;
-        audioPlayer.load();
+    // Close when a nav link is tapped
+    nav.addEventListener('click', (e) => {
+      if (e.target.tagName.toLowerCase() === 'a') {
+        header.classList.remove('nav-open');
+        toggle.setAttribute('aria-expanded', 'false');
       }
+    });
 
-      // Clicking a row switches track
-      rows.forEach(row => {
-        row.addEventListener('click', () => {
-          rows.forEach(r => r.classList.remove('active'));
-          row.classList.add('active');
-
-          const src = row.dataset.src;
-          audioSource.src = src;
-          audioPlayer.load();
-          audioPlayer.play();
-        });
+    // ✅ Close when overlay is tapped (fixes the "freeze")
+    if (overlay) {
+      overlay.addEventListener('click', () => {
+        header.classList.remove('nav-open');
+        toggle.setAttribute('aria-expanded', 'false');
       });
+    }
 
-      // Auto-fill durations
-      rows.forEach(row => {
+    // Optional: close if user taps anywhere outside header
+    document.addEventListener('click', (e) => {
+      if (!header.classList.contains('nav-open')) return;
+      if (header.contains(e.target)) return;
+
+      header.classList.remove('nav-open');
+      toggle.setAttribute('aria-expanded', 'false');
+    });
+  })();
+
+  // Audio playlist logic (unchanged)
+  document.addEventListener('DOMContentLoaded', () => {
+    const audioPlayer = document.getElementById('reflectionAudio');
+    const audioSource = document.getElementById('audioSource');
+    const rows = document.querySelectorAll('.playlist-row');
+
+    // Default track: first row
+    if (rows.length > 0) {
+      const firstSrc = rows[0].dataset.src;
+      audioSource.src = firstSrc;
+      audioPlayer.load();
+    }
+
+    // Clicking a row switches track
+    rows.forEach(row => {
+      row.addEventListener('click', () => {
+        rows.forEach(r => r.classList.remove('active'));
+        row.classList.add('active');
+
         const src = row.dataset.src;
-        const tempAudio = new Audio(src);
-        tempAudio.addEventListener('loadedmetadata', () => {
-          const dur = tempAudio.duration;
-          if (!isNaN(dur)) {
-            const total = Math.floor(dur);
-            const min = String(Math.floor(total / 60)).padStart(2, '0');
-            const sec = String(total % 60).padStart(2, '0');
-            const durEl = row.querySelector('.playlist-duration');
-            if (durEl) durEl.textContent = `${min}:${sec}`;
-          }
-        });
+        audioSource.src = src;
+        audioPlayer.load();
+        audioPlayer.play();
       });
     });
 
-    function sharePage() {
-      if (navigator.share) {
-        navigator.share({
-          title: "The Primacy of Moral Accountability -- Ninox Antolihao",
-          url: window.location.href
-        });
-      } else {
-        alert("Sharing not supported on this device.");
-      }
+    // Auto-fill durations
+    rows.forEach(row => {
+      const src = row.dataset.src;
+      const tempAudio = new Audio(src);
+      tempAudio.addEventListener('loadedmetadata', () => {
+        const dur = tempAudio.duration;
+        if (!isNaN(dur)) {
+          const total = Math.floor(dur);
+          const min = String(Math.floor(total / 60)).padStart(2, '0');
+          const sec = String(total % 60).padStart(2, '0');
+          const durEl = row.querySelector('.playlist-duration');
+          if (durEl) durEl.textContent = `${min}:${sec}`;
+        }
+      });
+    });
+  });
+
+  function sharePage() {
+    if (navigator.share) {
+      navigator.share({
+        title: "The Primacy of Moral Accountability -- Ninox Antolihao",
+        url: window.location.href
+      });
+    } else {
+      alert("Sharing not supported on this device.");
     }
-  </script>
+  }
+</script>
 </body>
 </html>
