--- a/reflections/reflections-header.html
+++ b/reflections/reflections-header.html
@@ -1,83 +1,113 @@
 <!-- /reflections/reflections-header.html -->
+
 <header class="ref-header">
   <div class="ref-header-inner">
-    <!-- Left: Logo / Brand -->
+    <!-- LEFT: Logo + brand + controls -->
     <div class="ref-header-left">
       <a href="/reflections/index.html" class="brand-link">
-        <!-- If you have an actual logo, you can replace this mark with <img> -->
-        <!-- <img src="/reflections/assets/moments-logo.png" alt="Moments of Solitude" class="brand-logo"> -->
-        <span class="brand-mark">✦</span>
+        <img src="/reflections/assets/logo1.PNG"
+             alt="Moments of Solitude"
+             class="brand-logo">
         <span class="brand-text">
           <span class="brand-title">Moments of Solitude</span>
           <span class="brand-subtitle">Stone Grill Reflections</span>
         </span>
       </a>
+
+      <div class="header-actions">
+        <!-- Hamburger -->
+        <button class="nav-toggle"
+                type="button"
+                aria-label="Toggle reflections menu"
+                aria-expanded="false">
+          ☰
+        </button>
+
+        <!-- Local page tools (optional but shared) -->
+        <div class="nav-buttons">
+          <button type="button" id="btnBack">Back</button>
+          <button type="button" id="btnShare">Share</button>
+          <button type="button" id="btnAudio">Audio</button>
+        </div>
+      </div>
     </div>
 
-    <!-- Center: Navigation (used both desktop + inside hamburger on mobile) -->
-    <nav class="ref-nav" aria-label="Reflections navigation">
-      <ul>
-        <li>
-          <a href="/reflections/index.html" data-icon="☰">
-            All Reflections
-          </a>
-        </li>
+    <!-- RIGHT: Current page badge (auto-filled by JS) -->
+    <div class="ref-header-right">
+      <div class="current-page-badge" aria-label="Currently reading">
+        <span class="page-icon" id="current-page-icon">△</span>
+        <span class="page-label" id="current-page-label">Reflection</span>
+      </div>
+    </div>
+  </div>
 
-        <!-- LIST ALL REFLECTIONS HERE -->
+  <!-- DROPDOWN PANEL: Reflections list (opens from hamburger) -->
+  <div class="ref-menu-panel" aria-label="Reflections menu">
+    <div class="ref-menu-card">
+      <div class="ref-menu-title">REFLECTIONS</div>
+      <ul class="ref-menu-list">
+        <!-- 🔽 WHEN YOU ADD A NEW REFLECTION PAGE,
+             ADD A LINK HERE AND MATCH THE HREF. -->
         <li>
-          <a href="/reflections/pages/the-paradox-of-god/read.html" data-icon="◎">
+          <a href="/reflections/pages/the-paradox-of-god/read.html"
+             class="ref-menu-link"
+             data-icon="△">
             The Paradox of God
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/the-divine-premise/read.html" data-icon="△">
-            The Premise of the Divine
+          <a href="/reflections/pages/the-divine-premise/read.html"
+             class="ref-menu-link"
+             data-icon="◇">
+            The Divine Premise
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/the-lost-language-of-metaphor/read.html" data-icon="✺">
+          <a href="/reflections/pages/the-lost-language-of-metaphor/read.html"
+             class="ref-menu-link"
+             data-icon="✺">
             The Lost Language of Metaphor
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/echoes-of-survival/read.html" data-icon="♒">
+          <a href="/reflections/pages/echoes-of-survival/read.html"
+             class="ref-menu-link"
+             data-icon="♒">
             Echoes of Survival
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/silent-influence/read.html" data-icon="❖">
+          <a href="/reflections/pages/silent-influence/read.html"
+             class="ref-menu-link"
+             data-icon="❖">
             Silent Influence
           </a>
         </li>
         <li>
-          <a href="/reflections/pages/madness-of-faith/read.html" data-icon="☄">
+          <a href="/reflections/pages/madness-of-faith/read.html"
+             class="ref-menu-link"
+             data-icon="☄">
             The Madness of Faith
           </a>
         </li>
-        <!-- Add more <li> entries as you create new reflections -->
+        <li>
+          <a href="/reflections/pages/the-god-we-created/read.html"
+             class="ref-menu-link"
+             data-icon="◎">
+            The God We Created
+          </a>
+        </li>
+        <li>
+          <a href="/reflections/pages/initial-premise/read.html"
+             class="ref-menu-link"
+             data-icon="▵">
+            The Fullness that Needs Nothing
+          </a>
+        </li>
       </ul>
-    </nav>
-
-    <!-- Right: Current Page + Back + Hamburger -->
-    <div class="ref-header-right">
-      <!-- Current Page Badge (filled automatically by JS) -->
-      <div class="current-page-badge" aria-label="Currently reading">
-        <span class="page-icon" id="current-page-icon">◎</span>
-        <span class="page-label" id="current-page-label">Reflection</span>
-      </div>
-
-      <!-- Back to main reflections page -->
-      <a href="/reflections/index.html" class="back-home-link">
-        ← Back to Reflections
-      </a>
-
-      <!-- Hamburger button for mobile -->
-      <button class="nav-toggle"
-              type="button"
-              aria-label="Toggle navigation"
-              aria-expanded="false">
-        ☰
-      </button>
     </div>
   </div>
+
+  <!-- DIM BACKGROUND WHEN MENU OPEN -->
+  <div class="ref-menu-overlay"></div>
 </header>
