--- a/reflections/assets/read.html
+++ b/reflections/assets/read.html
@@ -151,5 +151,10 @@
        SHARED HEADER + AUDIO JS
   ========================== -->
   <script src="/reflections/assets/reflections-header.js?v=21" defer></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/reflections/sw.js');
+  }
+</script>
 </body>
 </html>
